--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "name": "kidfiji.net-v3",
+  "description": "Kidfiji.net - Version 3",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Luke Fiji <luke.fiji@gmail.com>",
   "dependencies": {
     "gatsby": "^1.0.1",
     "gatsby-link": "^1.0.1",
-    "gatsby-plugin-react-helmet": "^1.0.1"
+    "gatsby-plugin-react-helmet": "^1.0.1",
+    "grid-styled": "^2.0.0-10",
+    "styled-components": "^2.1.1"
   },
   "keywords": [
     "gatsby"
@@ -20,6 +22,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "gatsby-plugin-styled-components": "^1.0.1",
     "prettier": "^1.5.2"
   }
 }
